--- a/modulo1/projeto-whatslab/src/App.css
+++ b/modulo1/projeto-whatslab/src/App.css
@@ -10,35 +10,12 @@ body{
 .App {
   text-align: center;
   border: thin solid black;
-  max-width: 600px;
+  width: 500px;
   height: 100vh;
   flex: 1 1 0%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-}
-
-.mensagens {
-  flex: 1 1 0%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding: 20px;
-}
-
-.input-mensagem {
-  flex: 1 1 0%;
-  margin: .3em;
-  padding: .3em;
-}
-
-.input-usuario {
-  width: 100px;
-  margin: .3em;
-  padding: .3em;
-}
-
-button {
-  margin: .3em;
-  padding: .3em;
+  background-color: #E5DDD5;
+  padding: 1%;
 }
